fixed spacing on top bars

--- a/CMPT350_A1/A1_course.css
+++ b/CMPT350_A1/A1_course.css
@@ -6,7 +6,11 @@ body {
   font-size: 20px;
   color: white;
   text-shadow: 2px 2px black;
+	line-height: 2.0;
+}
 
+h1 {
+	line-height: 1;
 }
 
 #lecture {
@@ -77,12 +81,9 @@ table {
 	text-align: center;
 	width: 500px;
 	font-family: arial, sans-serif;
-	#border: 5px black;
-	#border-collapse: collapse;
 	opacity: 80%;
 	text-shadow: none;
 	color: black;
-
 }
 
 td, th {
