--- a/CMPT350_A1/A1_home.css
+++ b/CMPT350_A1/A1_home.css
@@ -6,7 +6,11 @@ body {
   font-size: 20px;
   color: white;
   text-shadow: 2px 2px black;
+  line-height: 2.0;
+}
 
+h1 {
+	line-height: 1;
 }
 
 img {
@@ -46,7 +50,6 @@ img {
 }
 
 .topBar a {
-  display: block;
 	color: #f2ffe6;
 	text-decoration: none;
 	padding: 15px;
