--- a/CMPT350_A1/A1_ins.css
+++ b/CMPT350_A1/A1_ins.css
@@ -1,10 +1,16 @@
-
 body {
 	margin: 0;
 	background: #d1d1e2;
 	font-family: Arial, sans-serif;
-  text-align: left;
+  text-align: center;
   font-size: 20px;
+  color: white;
+  text-shadow: 2px 2px black;
+	line-height: 2.0;
+}
+
+h1 {
+	line-height: 1;
 }
 
 #image {
@@ -22,6 +28,9 @@ body {
 .topBar {
 	background-color: #204000;
 	height: 37px;
+  overflow: hidden;
+  text-decoration: none;
+  text-shadow: none;
 }
 
 .topBar ul {
@@ -52,7 +61,7 @@ body {
 	background-color: #13e30b;
 }
 pre {
-	font-family: "Arial Black", Gadget, sans-serif;
-  text-align: left;
+	font-family: Arial, sans-serif;
+  text-align: center;
   font-size: 20px;
 }
